--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pirate Translator</title>
-    <style>
+    <!-- <style>
       textarea {
         width: 80%;
         height: 10vh;
@@ -20,8 +20,10 @@
         margin: 1rem;
         padding: 1rem;
       }
-    </style>
+    </style> -->
+    <link rel="stylesheet" href="styles.css" />
   </head>
+
   <body>
     <h1>talk like Captain Jack Sparrow</h1>
     <textarea
